# HybridTestBed

./: .gitignore  README.md  base_strategy.py  class_distribution_phase1.csv  continual_learning_audit.md  dataset_integrity_report.txt  dataset_manager.py  dataset_manifest_phase1.csv  escalation_logging_review.md  ewc_strategy.py  generate_confusion_matrices.py  implementation_proposal.md  mixed_strategy.py  phase1_baseline_snapshot.md  phase1_preflight_decision.md  phase1_readiness_report.md  pipeline_structure_and_flow.md  prepare_phase1_dataset.py  replay_buffer_validation.md  replay_strategy.py  resource_monitor.py  run_internvideo2_smoke_test.py  run_phase2.sh  run_phase2_vlm_experiment.py  run_phase2_vlm_smoke_test.py  run_phase2_vlm_smoke_test_v2.py  run_qwen3_vl_smoke_test.py  run_ros2_test.sh  run_verification.py  split_report.csv  task_boundary_validation.md  timestamp_architecture_review.md  train_continual_role_report.md  vlm_preflight_audit.py
docs/: checkpoint_versioning_report.md  class_mapping_audit.md  continual_learning_audit.md  continual_learning_integration_plan.md  continual_learning_preflight.md  dataset_size_summary.md  label_integrity_report.md  model_compatibility_report.md  phase1_baseline_snapshot.md  phase1_dataset_summary.md  phase1_readiness_report.md  phase2_vlm_preflight_report.md  pipeline_audit_report.md  (+6 more)
gesture_ws/src/central_db_pkg/: package.xml  setup.cfg  setup.py
gesture_ws/src/central_db_pkg/central_db_pkg/: central_db_node.py
gesture_ws/src/central_db_pkg/launch/: amr_pipeline.launch (copy).py  amr_pipeline.launch.py  central_db.launch.py
gesture_ws/src/central_db_pkg/resource/: central_db_pkg
gesture_ws/src/vlm_interfaces/: CMakeLists.txt  package.xml
gesture_ws/src/vlm_interfaces/msg/: ClipReady.msg  ConfirmReply.msg  ConfirmRequest.msg  Intent.msg  KeypointsWindow.msg  RecorderRequest.msg  TrainingExample.msg  UnknownGesture.msg
gesture_ws/src/vlm_interfaces/srv/: InferClip.srv
gesture_ws/src/vlm_ros/: package.xml  setup.py
gesture_ws/src/vlm_ros/launch/: amr_gesture_create3_sim.launch.py  pipeline.launch.py
gesture_ws/src/vlm_ros/resource/: vlm_ros
gesture_ws/src/vlm_ros/vlm_ros/: vlm_node.py  vlm_node.py.bak_20251113_1903
(+184 files in other folders)
