<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vlm_ros</name>
  <version>0.0.0</version>
  <description>VLM ROS Launch Package</description>
  <maintainer email="sayak@example.com">sayak</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>frame_simplifier_pkg</exec_depend>
  <exec_depend>gesture_classifiers_pkg</exec_depend>
  <exec_depend>vlm_recorder_pkg</exec_depend>
  <exec_depend>vlm_bridge_pkg</exec_depend>
  <exec_depend>central_db_pkg</exec_depend>
  <exec_depend>ui_kiosk_pkg</exec_depend>
  <exec_depend>amr_telemetry_pkg</exec_depend>
  <exec_depend>vlm_dummy_pkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
